--- a/frontend/static/style.css
+++ b/frontend/static/style.css
@@ -71,7 +71,7 @@ form {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-top: 32px;
+  margin-top: 10px;
   padding: 0 16px;
 }
 
@@ -116,9 +116,6 @@ form textarea:focus {
   background-color: #fff;
 }
 
-
-
-
 form input[type="submit"] {
   margin-top: 16px;
   padding: 8px;
@@ -147,3 +144,46 @@ main p {
   font-size: 18px;
   color: #333;
 }
+
+.descripcion {
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 5px;
+}
+
+.prediction table{
+  border-collapse: collapse;
+  width: 100%;
+}
+.prediction td,th{
+  padding: 10px;
+  border: 1px solid #000;
+}
+.prediction td{
+  border-top: none;
+}
+.prediction th{
+  border-bottom:  none;
+}
+
+.prediction table p{
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.prediction-cell{
+  background: #000;
+  color: #fff;
+  margin-right: 10px;
+  padding: 10px;
+}
+
+.prediction-cell p {
+  color: #fff;
+}
+
